--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | My project</title>
+    <title>Unity WebGL Player | Mario Kart</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=1440 height=810></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">My project</div>
+        <div id="unity-build-title">Mario Kart</div>
       </div>
     </div>
     <script>
@@ -56,15 +56,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/App2.loader.js";
+      var loaderUrl = buildUrl + "/App3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/App2.data",
-        frameworkUrl: buildUrl + "/App2.framework.js",
-        codeUrl: buildUrl + "/App2.wasm",
+        dataUrl: buildUrl + "/App3.data",
+        frameworkUrl: buildUrl + "/App3.framework.js",
+        codeUrl: buildUrl + "/App3.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "My project",
-        productVersion: "1.0",
+        companyName: "Kylian Vermeulen",
+        productName: "Mario Kart",
+        productVersion: "2.0",
         showBanner: unityShowBanner,
       };
 
@@ -93,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1440px";
+        canvas.style.height = "810px";
       }
 
       loadingBar.style.display = "block";
